# Poligenie

./: Dockerfile  poliapp.py  pyproject.toml  requirements.txt
